# rtd-dir-reproducible-example

./: .readthedocs.yaml  README.md  pyproject.toml
docs/: conf.py  index.rst
