[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'rtd-dir-reproducible-example'
version = '1.0.0'
description = 'https://github.com/sphinx-contrib/images/pull/31'
authors = ['rlaphoenix <rlaphoenix@pm.me>']
license = 'MIT'
readme = 'README.md'
homepage = 'https://github.com/rlaphoenix/rtd-dir-reproducible-example'

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
Sphinx = "^4.3.2"
sphinxcontrib-images = "^0.9.4"
